5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1595_1016.log
== TEST (2019-03-26 21:48:23) 
-- CODE:
from math import*
a = int(input("x"))
b = int(input("x"))
c = int(input("x"))

area= sqrt((8-a)*(8-b)*(8-c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:48:33) 
-- CODE:
from math import*
a = int(input("x"))
b = int(input("x"))
c = int(input("x"))

area= sqrt((8-a)*(8-b)*(8-c))
print(area)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:49:49) 
-- CODE:
from math import*
a = float(input("x"))
b = float(input("z"))
c = float(input("c"))

area = sqrt((8-a)*(8-b)*(8-c))
print(round(area,5)

-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:49:51) 
-- CODE:
from math import*
a = float(input("x"))
b = float(input("z"))
c = float(input("c"))

area = sqrt((8-a)*(8-b)*(8-c))
print(round(area,5)

-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:49:57) 
-- CODE:
from math import*
a = float(input("x"))
b = float(input("z"))
c = float(input("c"))

area = sqrt((8-a)*(8-b)*(8-c))
print(round(area,5)
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:50:20) 
-- CODE:
from math import*
a = float(input("x"))
b = float(input("z"))
c = float(input("c"))

area = sqrt((8-a)*(8-b)*(8-c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = sqrt((8-a)*(8-b)*(8-c))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:50:29) 
-- CODE:
from math import*
a = float(input("x"))
b = float(input("z"))
c = float(input("c"))

area = sqrt((8-a)*(8-b)*(8-c))
print(round(area,5)

-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:50:44) 
-- CODE:
from math import*
a = float(input("x"))
b = float(input("z"))
c = float(input("c"))

area = sqrt((8-a)*(8-b)*(8-c))
print(area)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = sqrt((8-a)*(8-b)*(8-c))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:51:03) 
-- CODE:
from math import*
a = float(input("x"))
b = float(input("z"))
c = float(input("c"))

area = sqrt((8-a)*(8-b)*(8-c))
print(round(area,5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = sqrt((8-a)*(8-b)*(8-c))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:01:11) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
a = 16-b-c
b = 16-a-c
c = 16-a-b




area = sqrt((8-a)*(8-b)*(8-c))
print(round(area,5))

-- EXECUTION TIME:
0.151116
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
38.43254
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
331.9759
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
384.77266
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:06:56) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = 16-b-c
e = 16-a-c
f = 16-a-b

area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- EXECUTION TIME:
0.201797
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
94.88493
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
605.01901
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
699.71423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:06:58) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = 16-b-c
e = 16-a-c
f = 16-a-b

area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- OUTPUT:
94.88493
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:07:06) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = 16-b-c
e = 16-a-c
f = 16-a-b

area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- OUTPUT:
94.88493
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:08:24) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = 16-b-c*2
e = 16-a-c*2
f = 16-a-b*2

area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- EXECUTION TIME:
0.126227
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
216.33058
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
1281.6427
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
1474.05054
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:08:25) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = 16-b-c*2
e = 16-a-c*2
f = 16-a-b*2

area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- EXECUTION TIME:
0.120543
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
216.33058
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
1281.6427
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
1474.05054
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:09:05) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = (16-b-c)*2
e = (16-a-c)*2
f = (16-a-b)*2
print(d)
print(e)
print(f)
area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- OUTPUT:
-33.4
-16.4
-29.0
193.32853
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:09:10) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = (16-b-c)*2
e = (16-a-c)*2
f = (16-a-b)*2
print(d)
print(e)
print(f)
area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- EXECUTION TIME:
0.180821
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
-33.4
-16.4
-29.0
193.32853
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
-148.0
-128.0
-108.0
1568.77532
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
-164.0
-144.0
-120.0
1829.32556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:09:37) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = (16-b-c)*2
e = (16-a-c)*2
f = (16-a-b)*2
print(d)
print(e)
print(f)
area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- OUTPUT:
-33.4
-16.4
-29.0
193.32853
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:09:53) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
d = (16-b-c)*2
e = (16-a-c)*2
f = (16-a-b)*2
area = sqrt((8-d)*(8-e)*(8-f))
print(round(area,5))

-- EXECUTION TIME:
0.193995
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
193.32853
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
1568.77532
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
1829.32556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:10:58) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)*2
lado_b = (16-a-c)*2
lado_c = (16-a-b)*2
area = sqrt((8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- OUTPUT:
193.32853
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:11:15) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)*2
lado_b = (16-a-c)*2
lado_c = (16-a-b)*2
area = sqrt((8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- EXECUTION TIME:
0.124973
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
193.32853
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
1568.77532
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
1829.32556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:11:46) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)
lado_b = (16-a-c)
lado_c = (16-a-b)
area = sqrt((8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- OUTPUT:
94.88493
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:11:47) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)
lado_b = (16-a-c)
lado_c = (16-a-b)
area = sqrt((8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- OUTPUT:
94.88493
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:11:47) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)
lado_b = (16-a-c)
lado_c = (16-a-b)
area = sqrt((8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- EXECUTION TIME:
0.190488
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
94.88493
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
605.01901
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
699.71423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:17:02) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)
lado_b = (16-a-c)
lado_c = (16-a-b)
area = sqrt(8*(8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- EXECUTION TIME:
0.138537
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
268.37511
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
1711.25217
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
1979.0907
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:17:04) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)
lado_b = (16-a-c)
lado_c = (16-a-b)
area = sqrt(8*(8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- EXECUTION TIME:
0.166883
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
268.37511
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
1711.25217
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
1979.0907
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:17:05) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)
lado_b = (16-a-c)
lado_c = (16-a-b)
area = sqrt(8*(8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- OUTPUT:
268.37511
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:17:17) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
lado_a = (16-b-c)*2
lado_b = (16-a-c)*2
lado_c = (16-a-b)*2
area = sqrt(8*(8-lado_a)*(8-lado_b)*(8-lado_c))
print(round(area,5))

-- EXECUTION TIME:
0.135349
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
546.81565
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
4437.16666
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
5174.11403
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:27:57) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
s = (a+b+c)/2
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:28:05) 
-- CODE:
from math import*
a = float(input())
b = float(input())
c = float(input())
s = (a+b+c)/2
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- EXECUTION TIME:
0.194445
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
